--- a/template/page/home.html
+++ b/template/page/home.html
@@ -9,7 +9,7 @@
     <form method="post" enctype="multipart/form-data">
       {% csrf_token %}
       <!-- <label></label> -->
-      <input type="file" name="image" placeholder="Select image" />
+      <input type="file" name="image" required />
       <input type="submit" value="Submit" />
     </form>
   </body>
