--- a/template/base.html
+++ b/template/base.html
@@ -4,13 +4,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Processing</title>
+    <title>Image Processing | {% block title %} {% endblock %}</title>
+    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
   </head>
   <body>
-    {% include 'partials/_header.html' %} 
-    {% block content %} 
-    
-    {% endblock %}
+
+    {% include 'partials/_header.html' %} {% block content %} {% endblock %} 
     {% include 'partials/_footer.html' %}
+
+
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
+<script src="{% static 'js/bootstrap.min.js' %}" ></script>
   </body>
 </html>
