--- a/template/base.html
+++ b/template/base.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Processing | {% block title %} {% endblock %}</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
+    <link rel="stylesheet" href="{% static 'bootstrap-icons.css'%}" />
   </head>
   <body>
-
     {% include 'partials/_header.html' %} {% block content %} {% endblock %} 
     {% include 'partials/_footer.html' %}
 
-
-    <script src="{% static 'js/bootstrap.bundle.min.js' %}" ></script>
-<script src="{% static 'js/bootstrap.min.js' %}" ></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
