--- a/template/base.html
+++ b/template/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Image Processing | {% block title %} {% endblock %}</title>
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'bootstrap-icons.css'%}" />
+    <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/allstyle.css' %}" />
   </head>
   <body>
     {% include 'partials/_header.html' %} {% block content %} {% endblock %} 
