--- a/template/page/home.html
+++ b/template/page/home.html
@@ -1,25 +1,35 @@
-{% extends 'base.html' %} 
-{% load static %} 
-{% block title %} Home {% endblock%} 
+{% extends 'base.html' %} {% load static %} {% block title %} Home {% endblock%}
 {% block content %}
 <div id="homepage">
   <div class="container">
     <div class="row">
-      <div class="col">
-        <h3>
-          Welcome to Image Processing
-        </h3>
+      <div class="col py-5">
+        <h3>Welcome to Image Processing</h3>
         <span>
-          Remove your image background, add watermarks to your images for copyright sake
+          Remove your image background, add watermarks to your images for
+          copyright sake
         </span>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input
+          type="button"
+          class="btn btn-danger btn-sm"
+          value="Add Watermark"
+        />
+        <input
+          type="button"
+          class="btn btn-success btn-sm"
+          value="Remove Image Background"
+        />
       </div>
     </div>
   </div>
 </div>
-<form method="post" enctype="multipart/form-data">
+<!-- <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
-  <!-- <label></label> -->
   <input type="file" name="image" required />
   <input type="submit" value="Submit" />
-</form>
+</form> -->
 {% endblock %}
