--- a/watermarkconfig/static/css/allstyle.css
+++ b/watermarkconfig/static/css/allstyle.css
@@ -1,5 +1,11 @@
+html,
+body {
+  margin: 0px;
+  height: 100%;
+  background: #ffffff;
+}
 #homepage {
   background: url("../../../static/img/bg2.jpg") no-repeat center center;
   color: #fff;
-  min-height: 100%;
+  height: 70%;
 }
