--- a/template/page/removebg.html
+++ b/template/page/removebg.html
@@ -1,19 +1,10 @@
-{% extends 'base.html' %} {% load static %} {% block title %} Add Watermark to
+{% extends 'base.html' %} {% load static %} {% block title %} Remove from
 image {% endblock %} {% block content %}
 <div class="container py-4">
   <div class="row">
     <div class="col">
       <form action="" method="post">
         {% csrf_token %}
-        <div class="mb-3">
-          <label for="formGroupExampleInput" class="form-label">Text</label>
-          <input
-            type="text"
-            class="form-control"
-            id="formGroupExampleInput"
-            placeholder="Text for Watermark"
-          />
-        </div>
         <div class="mb-3">
           <label for="formFileMultiple" class="form-label">Select Image</label>
           <input
@@ -27,7 +18,11 @@ image {% endblock %} {% block content %}
           />
         </div>
         <div>
-          <input type="submit" value="Add Watermark" class="btn btn-success" />
+          <input
+            type="submit"
+            value="Remove Image Background"
+            class="btn btn-success"
+          />
         </div>
       </form>
     </div>
