remove image bg done

--- a/template/page/home.html
+++ b/template/page/home.html
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col py-5">
-        <h3>Welcome to Image Processing</h3>
+        <h3>Image Processing</h3>
         <span>
           Remove your image background, add watermarks to your images for
           copyright sake
