--- a/template/partials/_header.html
+++ b/template/partials/_header.html
@@ -5,7 +5,7 @@
       class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"
     >
       <a
-        href="/"
+        href="{% url 'home' %}"
         class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"
       >
         <svg
@@ -28,25 +28,35 @@
         class="nav-link px-2 text-white text-secondary"
         {% endif %}
         >Home</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Features</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">Pricing</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">FAQs</a></li>
-        <li><a href="#" class="nav-link px-2 text-white">About</a></li>
+        <li><a href="{% url 'addwatermark' %}" {% if 'addwatermark' in request.path %} 
+        class="nav-link px-2 text-secondary"
+        {% else %}
+        class="nav-link px-2 text-white"
+        {% endif %}
+        >Watermark</a></li>
+        <li><a href="{% url 'removebgimg' %}" {% if 'removebgimg' in request.path %} 
+        class="nav-link px-2 text-secondary"
+        {% else %}
+        class="nav-link px-2 text-white"
+        {% endif %}
+        >Background</a></li>
+        
       </ul>
 
-      <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+      <!-- <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
         <input
           type="search"
           class="form-control form-control-dark"
           placeholder="Search..."
           aria-label="Search"
         />
-      </form>
+      </form> -->
 
-      <div class="text-end">
+      <!-- <div class="text-end">
+        
         <button type="button" class="btn btn-outline-light me-2">Login</button>
         <button type="button" class="btn btn-warning">Sign-up</button>
-      </div>
+      </div> -->
     </div>
   </div>
 </header>
