--- a/template/partials/_footer.html
+++ b/template/partials/_footer.html
@@ -116,7 +116,7 @@
       <p>© 2021 Company, Inc. All rights reserved.</p>
       <ul class="list-unstyled d-flex">
         <li class="ms-3">
-          <a class="link-dark" href="#"
+          <a class="link-dark" href="www.twitter.com/tolanimax"
             ><svg class="bi" width="24" height="24">
               <use xlink:href="#twitter"></use></svg
           ></a>
@@ -128,7 +128,7 @@
           ></a>
         </li>
         <li class="ms-3">
-          <a class="link-dark" href="#"
+          <a class="link-dark" href="www.fb.com/fakeem3" 
             ><svg class="bi" width="24" height="24">
               <use xlink:href="#facebook"></use></svg
           ></a>
