--- a/template/page/home.html
+++ b/template/page/home.html
@@ -1,31 +1,11 @@
-{% extends 'base.html' %} {% load static %} {% block title %} Home {% endblock%}
-{% block content %}
-<div id="homepage">
-  <div class="container">
-    <div class="row">
-      <div class="col py-5">
-        <h3>Image Processing</h3>
-        <span>
-          Remove your image background, add watermarks to your images for
-          copyright sake
-        </span>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <a href="{% url 'addwatermark' %}" class="btn btn-danger btn-sm"
-          >Add Watermark</a
-        >
-        <a href="{% url 'removebgimg' %}" class="btn btn-success btn-sm"
-          >Remove Image Background</a
-        >
-      </div>
-    </div>
-  </div>
-</div>
-<!-- <form method="post" enctype="multipart/form-data">
-  {% csrf_token %}
-  <input type="file" name="image" required />
-  <input type="submit" value="Submit" />
-</form> -->
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  Akeem
+</body>
+</html>
